--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -36,6 +36,18 @@ dependencies:
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.8
+  
+  # RouterOS Client - کتابخانه آماده برای اتصال به MikroTik RouterOS
+  router_os_client: ^2.0.0
+  
+  # Crypto library for MD5 hashing (برای فایل قدیمی - می‌تواند حذف شود)
+  crypto: ^3.0.5
+  
+  # Shared Preferences برای ذخیره تنظیمات
+  shared_preferences: ^2.2.2
+  
+  # Provider برای مدیریت state
+  provider: ^6.1.1
 
 dev_dependencies:
   flutter_test:
@@ -59,10 +71,10 @@ flutter:
   # the material Icons class.
   uses-material-design: true
 
-  # To add assets to your application, add an assets section, like this:
-  # assets:
-  #   - images/a_dot_burr.jpeg
-  #   - images/a_dot_ham.jpeg
+  # Assets
+  assets:
+    - assets/images/logos/logo.png
+    - assets/images/logos/logo.svg
 
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/to/resolution-aware-images
@@ -70,22 +82,19 @@ flutter:
   # For details regarding adding assets from package dependencies, see
   # https://flutter.dev/to/asset-from-package
 
-  # To add custom fonts to your application, add a fonts section here,
-  # in this "flutter" section. Each entry in this list should have a
-  # "family" key with the font family name, and a "fonts" key with a
-  # list giving the asset and other descriptors for the font. For
-  # example:
-  # fonts:
-  #   - family: Schyler
-  #     fonts:
-  #       - asset: fonts/Schyler-Regular.ttf
-  #       - asset: fonts/Schyler-Italic.ttf
-  #         style: italic
-  #   - family: Trajan Pro
-  #     fonts:
-  #       - asset: fonts/TrajanPro.ttf
-  #       - asset: fonts/TrajanPro_Bold.ttf
-  #         weight: 700
-  #
-  # For details regarding fonts from package dependencies,
-  # see https://flutter.dev/to/font-from-package
+  # فونت فارسی وزیر
+  fonts:
+    - family: Vazir
+      fonts:
+        - asset: assets/fonts/vazir/Vazir-Thin.ttf
+          weight: 100
+        - asset: assets/fonts/vazir/Vazir-Light.ttf
+          weight: 300
+        - asset: assets/fonts/vazir/Vazir-Regular.ttf
+          weight: 400
+        - asset: assets/fonts/vazir/Vazir-Medium.ttf
+          weight: 500
+        - asset: assets/fonts/vazir/Vazir-Bold.ttf
+          weight: 700
+        - asset: assets/fonts/vazir/Vazir-Black.ttf
+          weight: 900
