--- a/android/gradle.properties
+++ b/android/gradle.properties
@@ -1,2 +1,8 @@
 org.gradle.jvmargs=-Xmx8G -XX:MaxMetaspaceSize=4G -XX:ReservedCodeCacheSize=512m -XX:+HeapDumpOnOutOfMemoryError
 android.useAndroidX=true
+# غیرفعال کردن incremental compilation در صورت مشکل با cache
+kotlin.incremental=false
+# بهبود عملکرد Gradle
+org.gradle.caching=true
+org.gradle.parallel=true
+org.gradle.configureondemand=true
